# Simple-cpp-game-made-with-SFML

./: .gitmodules  CMakeLists.txt  README.md  SHA256.h  comp.sh  fmap.map  fmap2.map  main.cpp  run 20 clients.sh
.github/workflows/: CI.yml  cmake.yml
include/: SHA256.h
maps/: fmap.map  fmap2.map  fmap3.map  fmap4.map
src/: AIgame.cpp  AIgame.h  NNe.cpp  NNe.h  SHA256.cpp  ai.hpp  baseclasses.hpp  game.cpp  game.h  main.cpp
